--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 .text{
-    margin-top: 90px;
+    position: relative;
+    top: 120px;
 }
 .text p{
     text-align: center;
@@ -17,19 +18,21 @@
 .text2{
     text-align: center;
     font-style: italic;
-    margin-top: 25px;
+    position: relative;
+    top: 200px;
+    
 }
 .icon img{ 
     position: relative;
     left: 40%;
-    margin: 30px 10px 0 10px;
+    margin: 90px 10px 0 10px;
 }
 
 .En a{
     position: relative;
     left: 45%;
     font-size: 18px;
-    top: 40px;
+    top: 90px;
 }
 
 .Edit{
